[tool.poetry]
name = "xarray-select"
version = "0.1.0"
description = "xarray extension for data selection"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
documentation = "https://astropenguin.github.io/xarray-select/"
homepage = "https://github.com/astropenguin/xarray-select/"
keywords = ["xarray", "xarray-accessor", "xarray-extension"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
typing-extensions = "^4.1"
xarray = ">=2022.3, <2025.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
ipython = "^8.18"
myst-parser = "^2.0"
pydata-sphinx-theme = "^0.14"
pyright = "^1.1"
pytest = "^7.4"
sphinx = "^7.2"

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
